--- a/convictUnfiltered.ipynb
+++ b/convictUnfiltered.ipynb
@@ -153,98 +153,240 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (Temp/ipykernel_27432/1898521207.py, line 37)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  File \u001b[1;32m\"C:\\Users\\Rapha\\AppData\\Local\\Temp/ipykernel_27432/1898521207.py\"\u001b[1;36m, line \u001b[1;32m37\u001b[0m\n\u001b[1;33m    df. = pd.Categorical(df.)\u001b[0m\n\u001b[1;37m        ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "df.ID= pd.Categorical(df.ID)\n",
+      "df['ID_code'] = df.ID.cat.codes\n",
+      "df.name= pd.Categorical(df.name)\n",
+      "df['name_code'] = df.name.cat.codes\n",
+      "df.first= pd.Categorical(df.first)\n",
+      "df['first_code'] = df.first.cat.codes\n",
+      "df.last= pd.Categorical(df.last)\n",
+      "df['last_code'] = df.last.cat.codes\n",
+      "df.compas_screening_date= pd.Categorical(df.compas_screening_date)\n",
+      "df['compas_screening_date_code'] = df.compas_screening_date.cat.codes\n",
+      "df.sex= pd.Categorical(df.sex)\n",
+      "df['sex_code'] = df.sex.cat.codes\n",
+      "df.dob= pd.Categorical(df.dob)\n",
+      "df['dob_code'] = df.dob.cat.codes\n",
+      "df.age= pd.Categorical(df.age)\n",
+      "df['age_code'] = df.age.cat.codes\n",
+      "df.age_cat= pd.Categorical(df.age_cat)\n",
+      "df['age_cat_code'] = df.age_cat.cat.codes\n",
+      "df.race= pd.Categorical(df.race)\n",
+      "df['race_code'] = df.race.cat.codes\n",
+      "df.juv_fel_count= pd.Categorical(df.juv_fel_count)\n",
+      "df['juv_fel_count_code'] = df.juv_fel_count.cat.codes\n",
+      "df.decile_score= pd.Categorical(df.decile_score)\n",
+      "df['decile_score_code'] = df.decile_score.cat.codes\n",
+      "df.juv_misd_count= pd.Categorical(df.juv_misd_count)\n",
+      "df['juv_misd_count_code'] = df.juv_misd_count.cat.codes\n",
+      "df.juv_other_count= pd.Categorical(df.juv_other_count)\n",
+      "df['juv_other_count_code'] = df.juv_other_count.cat.codes\n",
+      "df.priors_count= pd.Categorical(df.priors_count)\n",
+      "df['priors_count_code'] = df.priors_count.cat.codes\n",
+      "df.days_b_screening_arrest= pd.Categorical(df.days_b_screening_arrest)\n",
+      "df['days_b_screening_arrest_code'] = df.days_b_screening_arrest.cat.codes\n",
+      "df.c_jail_in= pd.Categorical(df.c_jail_in)\n",
+      "df['c_jail_in_code'] = df.c_jail_in.cat.codes\n",
+      "df.c_jail_out= pd.Categorical(df.c_jail_out)\n",
+      "df['c_jail_out_code'] = df.c_jail_out.cat.codes\n",
+      "df.c_case_number= pd.Categorical(df.c_case_number)\n",
+      "df['c_case_number_code'] = df.c_case_number.cat.codes\n",
+      "df.c_offense_date= pd.Categorical(df.c_offense_date)\n",
+      "df['c_offense_date_code'] = df.c_offense_date.cat.codes\n",
+      "df.c_arrest_date= pd.Categorical(df.c_arrest_date)\n",
+      "df['c_arrest_date_code'] = df.c_arrest_date.cat.codes\n",
+      "df.c_days_from_compas= pd.Categorical(df.c_days_from_compas)\n",
+      "df['c_days_from_compas_code'] = df.c_days_from_compas.cat.codes\n",
+      "df.c_charge_degree= pd.Categorical(df.c_charge_degree)\n",
+      "df['c_charge_degree_code'] = df.c_charge_degree.cat.codes\n",
+      "df.c_charge_desc= pd.Categorical(df.c_charge_desc)\n",
+      "df['c_charge_desc_code'] = df.c_charge_desc.cat.codes\n",
+      "df.is_recid= pd.Categorical(df.is_recid)\n",
+      "df['is_recid_code'] = df.is_recid.cat.codes\n",
+      "df.r_case_number= pd.Categorical(df.r_case_number)\n",
+      "df['r_case_number_code'] = df.r_case_number.cat.codes\n",
+      "df.r_charge_degree= pd.Categorical(df.r_charge_degree)\n",
+      "df['r_charge_degree_code'] = df.r_charge_degree.cat.codes\n",
+      "df.r_days_from_arrest= pd.Categorical(df.r_days_from_arrest)\n",
+      "df['r_days_from_arrest_code'] = df.r_days_from_arrest.cat.codes\n",
+      "df.r_offense_date= pd.Categorical(df.r_offense_date)\n",
+      "df['r_offense_date_code'] = df.r_offense_date.cat.codes\n",
+      "df.r_charge_desc= pd.Categorical(df.r_charge_desc)\n",
+      "df['r_charge_desc_code'] = df.r_charge_desc.cat.codes\n",
+      "df.r_jail_in= pd.Categorical(df.r_jail_in)\n",
+      "df['r_jail_in_code'] = df.r_jail_in.cat.codes\n",
+      "df.r_jail_out= pd.Categorical(df.r_jail_out)\n",
+      "df['r_jail_out_code'] = df.r_jail_out.cat.codes\n",
+      "df.violent_recid= pd.Categorical(df.violent_recid)\n",
+      "df['violent_recid_code'] = df.violent_recid.cat.codes\n",
+      "df.is_violent_recid= pd.Categorical(df.is_violent_recid)\n",
+      "df['is_violent_recid_code'] = df.is_violent_recid.cat.codes\n",
+      "df.vr_case_number= pd.Categorical(df.vr_case_number)\n",
+      "df['vr_case_number_code'] = df.vr_case_number.cat.codes\n",
+      "df.vr_charge_degree= pd.Categorical(df.vr_charge_degree)\n",
+      "df['vr_charge_degree_code'] = df.vr_charge_degree.cat.codes\n",
+      "df.vr_offense_date= pd.Categorical(df.vr_offense_date)\n",
+      "df['vr_offense_date_code'] = df.vr_offense_date.cat.codes\n",
+      "df.vr_charge_desc= pd.Categorical(df.vr_charge_desc)\n",
+      "df['vr_charge_desc_code'] = df.vr_charge_desc.cat.codes\n",
+      "df.type_of_assessment= pd.Categorical(df.type_of_assessment)\n",
+      "df['type_of_assessment_code'] = df.type_of_assessment.cat.codes\n",
+      "df.decile_score.1= pd.Categorical(df.decile_score.1)\n",
+      "df['decile_score.1_code'] = df.decile_score.1.cat.codes\n",
+      "df.score_text= pd.Categorical(df.score_text)\n",
+      "df['score_text_code'] = df.score_text.cat.codes\n",
+      "df.screening_date= pd.Categorical(df.screening_date)\n",
+      "df['screening_date_code'] = df.screening_date.cat.codes\n",
+      "df.v_type_of_assessment= pd.Categorical(df.v_type_of_assessment)\n",
+      "df['v_type_of_assessment_code'] = df.v_type_of_assessment.cat.codes\n",
+      "df.v_decile_score= pd.Categorical(df.v_decile_score)\n",
+      "df['v_decile_score_code'] = df.v_decile_score.cat.codes\n",
+      "df.v_score_text= pd.Categorical(df.v_score_text)\n",
+      "df['v_score_text_code'] = df.v_score_text.cat.codes\n",
+      "df.v_screening_date= pd.Categorical(df.v_screening_date)\n",
+      "df['v_screening_date_code'] = df.v_screening_date.cat.codes\n",
+      "df.in_custody= pd.Categorical(df.in_custody)\n",
+      "df['in_custody_code'] = df.in_custody.cat.codes\n",
+      "df.out_custody= pd.Categorical(df.out_custody)\n",
+      "df['out_custody_code'] = df.out_custody.cat.codes\n",
+      "df.priors_count.1= pd.Categorical(df.priors_count.1)\n",
+      "df['priors_count.1_code'] = df.priors_count.1.cat.codes\n",
+      "df.start= pd.Categorical(df.start)\n",
+      "df['start_code'] = df.start.cat.codes\n",
+      "df.end= pd.Categorical(df.end)\n",
+      "df['end_code'] = df.end.cat.codes\n",
+      "df.event= pd.Categorical(df.event)\n",
+      "df['event_code'] = df.event.cat.codes\n",
+      "df.label= pd.Categorical(df.label)\n",
+      "df['label_code'] = df.label.cat.codes\n"
      ]
     }
    ],
    "source": [
-    "df.ID = pd.Categorical(df.ID)\n",
-    "df['ID_code'] = df.ID.cat.codes\n",
-    "df.name = pd.Categorical(df.name)\n",
-    "df['name_code'] = df.name.cat.codes\n",
-    "df.first = pd.Categorical(df.first)\n",
-    "df['first_code'] = df.first.cat.codes\n",
-    "df.last = pd.Categorical(df.last)\n",
-    "df['last_code'] = df.last.cat.codes\n",
-    "df.compas_screening_date = pd.Categorical(df.compas_screening_date)\n",
-    "df['compas_screening_date_code'] = df.compas_screening_date.cat.codes\n",
-    "df.sex = pd.Categorical(df.sex)\n",
-    "df['sex_code'] = df.sex.cat.codes\n",
-    "df.dob = pd.Categorical(df.dob)\n",
-    "df['dob_code'] = df.dob.cat.codes\n",
-    "df.age = pd.Categorical(df.age)\n",
-    "df['age_code'] = df.age.cat.codes\n",
-    "df.age_cat = pd.Categorical(df.age_cat)\n",
-    "df['age_cat_code'] = df.age_cat.cat.codes\n",
-    "df.race = pd.Categorical(df.race)\n",
-    "df['race_code'] = df.race.cat.codes\n",
-    "df.juv_fel_count = pd.Categorical(df.juv_fel_count)\n",
-    "df['juv_fel_count_code'] = df.juv_fel_count.cat.codes\n",
-    "df.decile_score = pd.Categorical(df.decile_score)\n",
-    "df['decile_score_code'] = df.decile_score.cat.codes\n",
-    "df.juv_misd_count = pd.Categorical(df.juv_misd_count)\n",
-    "df['juv_misd_count_code'] = df.juv_misd_count.cat.codes\n",
-    "df.juv_other_count = pd.Categorical(df.juv_other_count)\n",
-    "df['juv_other_count_code'] = df.juv_other_count.cat.codes\n",
-    "df.priors_count = pd.Categorical(df.priors_count)\n",
-    "df['priors_count_code'] = df.priors_count.cat.codes\n",
-    "df.days_b_screening_arrest = pd.Categorical(df.days_b_screening_arrest)\n",
-    "df['days_b_screening_arrest_code'] = df.days_b_screening_arrest.cat.codes\n",
-    "df.c_jail_in = pd.Categorical(df.c_jail_in)\n",
-    "df['c_jail_in_code'] = df.c_jail_in.cat.codes\n",
-    "df.c_jail_out = pd.Categorical(df.c_jail_out)\n",
-    "df['c_jail_out_code'] = df.c_jail_out.cat.codes\n",
-    "df. = pd.Categorical(df.)\n",
-    "df['_code'] = df..cat.codes\n",
-    "df. = pd.Categorical(df.)\n",
-    "df['_code'] = df..cat.codes\n",
-    "df. = pd.Categorical(df.)\n",
-    "df['_code'] = df..cat.codes\n",
-    "df. = pd.Categorical(df.)\n",
-    "df['_code'] = df..cat.codes\n",
-    "df. = pd.Categorical(df.)\n",
-    "df['_code'] = df..cat.codes\n",
-    "df. = pd.Categorical(df.)\n",
-    "df['_code'] = df..cat.codes\n",
-    "df. = pd.Categorical(df.)\n",
-    "df['_code'] = df..cat.codes\n",
-    "df. = pd.Categorical(df.)\n",
-    "df['_code'] = df..cat.codes\n",
-    "df. = pd.Categorical(df.)\n",
-    "df['_code'] = df..cat.codes\n",
-    "df. = pd.Categorical(df.)\n",
-    "df['_code'] = df..cat.codes\n",
-    "df. = pd.Categorical(df.)\n",
-    "df['_code'] = df..cat.codes\n",
-    "df. = pd.Categorical(df.)\n",
-    "df['_code'] = df..cat.codes\n",
-    "df. = pd.Categorical(df.)\n",
-    "df['_code'] = df..cat.codes\n",
-    "df. = pd.Categorical(df.)\n",
-    "df['_code'] = df..cat.codes\n",
-    "df. = pd.Categorical(df.)\n",
-    "df['_code'] = df..cat.codes\n",
-    "df. = pd.Categorical(df.)\n",
-    "df['_code'] = df..cat.codes\n",
-    "df. = pd.Categorical(df.)\n",
-    "df['_code'] = df..cat.codes\n",
-    "df. = pd.Categorical(df.)\n",
-    "df['_code'] = df..cat.codes\n",
-    "df. = pd.Categorical(df.)\n",
-    "df['_code'] = df..cat.codes\n",
-    "df. = pd.Categorical(df.)\n",
-    "df['_code'] = df..cat.codes\n",
-    "df. = pd.Categorical(df.)\n",
-    "df['_code'] = df..cat.codes\n",
+    "\n",
+    "for element in column_title:\n",
+    "    ligne1 = \"df.\"+element + \"= pd.Categorical(df.\"+element+\")\"\n",
+    "    ligne2 = \"df['\"+element+\"_code'] = df.\"+element+\".cat.codes\"\n",
+    "    print(ligne1)\n",
+    "    print(ligne2)\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.ID= pd.Categorical(df.ID)\n",
+    "df['ID_code'] = df.ID.cat.codes\n",
+    "df.name= pd.Categorical(df.name)\n",
+    "df['name_code'] = df.name.cat.codes\n",
+    "df.compas_screening_date= pd.Categorical(df.compas_screening_date)\n",
+    "df['compas_screening_date_code'] = df.compas_screening_date.cat.codes\n",
+    "df.sex= pd.Categorical(df.sex)\n",
+    "df['sex_code'] = df.sex.cat.codes\n",
+    "df.dob= pd.Categorical(df.dob)\n",
+    "df['dob_code'] = df.dob.cat.codes\n",
+    "df.age= pd.Categorical(df.age)\n",
+    "df['age_code'] = df.age.cat.codes\n",
+    "df.age_cat= pd.Categorical(df.age_cat)\n",
+    "df['age_cat_code'] = df.age_cat.cat.codes\n",
+    "df.race= pd.Categorical(df.race)\n",
+    "df['race_code'] = df.race.cat.codes\n",
+    "df.juv_fel_count= pd.Categorical(df.juv_fel_count)\n",
+    "df['juv_fel_count_code'] = df.juv_fel_count.cat.codes\n",
+    "df.decile_score= pd.Categorical(df.decile_score)\n",
+    "df['decile_score_code'] = df.decile_score.cat.codes\n",
+    "df.juv_misd_count= pd.Categorical(df.juv_misd_count)\n",
+    "df['juv_misd_count_code'] = df.juv_misd_count.cat.codes\n",
+    "df.juv_other_count= pd.Categorical(df.juv_other_count)\n",
+    "df['juv_other_count_code'] = df.juv_other_count.cat.codes\n",
+    "df.priors_count= pd.Categorical(df.priors_count)\n",
+    "df['priors_count_code'] = df.priors_count.cat.codes\n",
+    "df.days_b_screening_arrest= pd.Categorical(df.days_b_screening_arrest)\n",
+    "df['days_b_screening_arrest_code'] = df.days_b_screening_arrest.cat.codes\n",
+    "df.c_jail_in= pd.Categorical(df.c_jail_in)\n",
+    "df['c_jail_in_code'] = df.c_jail_in.cat.codes\n",
+    "df.c_jail_out= pd.Categorical(df.c_jail_out)\n",
+    "df['c_jail_out_code'] = df.c_jail_out.cat.codes\n",
+    "df.c_case_number= pd.Categorical(df.c_case_number)\n",
+    "df['c_case_number_code'] = df.c_case_number.cat.codes\n",
+    "df.c_offense_date= pd.Categorical(df.c_offense_date)\n",
+    "df['c_offense_date_code'] = df.c_offense_date.cat.codes\n",
+    "df.c_arrest_date= pd.Categorical(df.c_arrest_date)\n",
+    "df['c_arrest_date_code'] = df.c_arrest_date.cat.codes\n",
+    "df.c_days_from_compas= pd.Categorical(df.c_days_from_compas)\n",
+    "df['c_days_from_compas_code'] = df.c_days_from_compas.cat.codes\n",
+    "df.c_charge_degree= pd.Categorical(df.c_charge_degree)\n",
+    "df['c_charge_degree_code'] = df.c_charge_degree.cat.codes\n",
+    "df.c_charge_desc= pd.Categorical(df.c_charge_desc)\n",
+    "df['c_charge_desc_code'] = df.c_charge_desc.cat.codes\n",
+    "df.is_recid= pd.Categorical(df.is_recid)\n",
+    "df['is_recid_code'] = df.is_recid.cat.codes\n",
+    "df.r_case_number= pd.Categorical(df.r_case_number)\n",
+    "df['r_case_number_code'] = df.r_case_number.cat.codes\n",
+    "df.r_charge_degree= pd.Categorical(df.r_charge_degree)\n",
+    "df['r_charge_degree_code'] = df.r_charge_degree.cat.codes\n",
+    "df.r_days_from_arrest= pd.Categorical(df.r_days_from_arrest)\n",
+    "df['r_days_from_arrest_code'] = df.r_days_from_arrest.cat.codes\n",
+    "df.r_offense_date= pd.Categorical(df.r_offense_date)\n",
+    "df['r_offense_date_code'] = df.r_offense_date.cat.codes\n",
+    "df.r_charge_desc= pd.Categorical(df.r_charge_desc)\n",
+    "df['r_charge_desc_code'] = df.r_charge_desc.cat.codes\n",
+    "df.r_jail_in= pd.Categorical(df.r_jail_in)\n",
+    "df['r_jail_in_code'] = df.r_jail_in.cat.codes\n",
+    "df.r_jail_out= pd.Categorical(df.r_jail_out)\n",
+    "df['r_jail_out_code'] = df.r_jail_out.cat.codes\n",
+    "df.violent_recid= pd.Categorical(df.violent_recid)\n",
+    "df['violent_recid_code'] = df.violent_recid.cat.codes\n",
+    "df.is_violent_recid= pd.Categorical(df.is_violent_recid)\n",
+    "df['is_violent_recid_code'] = df.is_violent_recid.cat.codes\n",
+    "df.vr_case_number= pd.Categorical(df.vr_case_number)\n",
+    "df['vr_case_number_code'] = df.vr_case_number.cat.codes\n",
+    "df.vr_charge_degree= pd.Categorical(df.vr_charge_degree)\n",
+    "df['vr_charge_degree_code'] = df.vr_charge_degree.cat.codes\n",
+    "df.vr_offense_date= pd.Categorical(df.vr_offense_date)\n",
+    "df['vr_offense_date_code'] = df.vr_offense_date.cat.codes\n",
+    "df.vr_charge_desc= pd.Categorical(df.vr_charge_desc)\n",
+    "df['vr_charge_desc_code'] = df.vr_charge_desc.cat.codes\n",
+    "df.type_of_assessment= pd.Categorical(df.type_of_assessment)\n",
+    "df['type_of_assessment_code'] = df.type_of_assessment.cat.codes\n",
+    "df.decile_score.1= pd.Categorical(df.decile_score.1)\n",
+    "df['decile_score.1_code'] = df.decile_score.1.cat.codes\n",
+    "df.score_text= pd.Categorical(df.score_text)\n",
+    "df['score_text_code'] = df.score_text.cat.codes\n",
+    "df.screening_date= pd.Categorical(df.screening_date)\n",
+    "df['screening_date_code'] = df.screening_date.cat.codes\n",
+    "df.v_type_of_assessment= pd.Categorical(df.v_type_of_assessment)\n",
+    "df['v_type_of_assessment_code'] = df.v_type_of_assessment.cat.codes\n",
+    "df.v_decile_score= pd.Categorical(df.v_decile_score)\n",
+    "df['v_decile_score_code'] = df.v_decile_score.cat.codes\n",
+    "df.v_score_text= pd.Categorical(df.v_score_text)\n",
+    "df['v_score_text_code'] = df.v_score_text.cat.codes\n",
+    "df.v_screening_date= pd.Categorical(df.v_screening_date)\n",
+    "df['v_screening_date_code'] = df.v_screening_date.cat.codes\n",
+    "df.in_custody= pd.Categorical(df.in_custody)\n",
+    "df['in_custody_code'] = df.in_custody.cat.codes\n",
+    "df.out_custody= pd.Categorical(df.out_custody)\n",
+    "df['out_custody_code'] = df.out_custody.cat.codes\n",
+    "df.priors_count.1= pd.Categorical(df.priors_count.1)\n",
+    "df['priors_count.1_code'] = df.priors_count.1.cat.codes\n",
+    "df.start= pd.Categorical(df.start)\n",
+    "df['start_code'] = df.start.cat.codes\n",
+    "df.end= pd.Categorical(df.end)\n",
+    "df['end_code'] = df.end.cat.codes\n",
+    "df.event= pd.Categorical(df.event)\n",
+    "df['event_code'] = df.event.cat.codes\n",
+    "df.label= pd.Categorical(df.label)\n",
+    "df['label_code'] = df.label.cat.codes\n"
    ]
   },
   {
