--- a/convictUnfiltered.ipynb
+++ b/convictUnfiltered.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -27,8 +27,8 @@
       "---  ------                   --------------  -----  \n",
       " 0   ID                       7214 non-null   int64  \n",
       " 1   name                     7214 non-null   object \n",
-      " 2   first                    7214 non-null   object \n",
-      " 3   last                     7214 non-null   object \n",
+      " 2   firstName                7214 non-null   object \n",
+      " 3   lastName                 7214 non-null   object \n",
       " 4   compas_screening_date    7214 non-null   object \n",
       " 5   sex                      7214 non-null   object \n",
       " 6   dob                      7214 non-null   object \n",
@@ -81,7 +81,7 @@
       "dtypes: float64(5), int64(15), object(33)\n",
       "memory usage: 2.9+ MB\n",
       "HEAD\n",
-      "     ID               name     first       last compas_screening_date     sex  \\\n",
+      "     ID               name firstName   lastName compas_screening_date     sex  \\\n",
       "0   452         steven lux    steven        lux            2013-01-05    Male   \n",
       "1   573        andre small     andre      small            2013-04-03    Male   \n",
       "2  4952        willie gray    willie       gray            2014-10-31    Male   \n",
@@ -131,7 +131,7 @@
       "\n",
       "[10 rows x 53 columns]\n",
       "the name of all collumns : \n",
-      "['ID', 'name', 'first', 'last', 'compas_screening_date', 'sex', 'dob', 'age', 'age_cat', 'race', 'juv_fel_count', 'decile_score', 'juv_misd_count', 'juv_other_count', 'priors_count', 'days_b_screening_arrest', 'c_jail_in', 'c_jail_out', 'c_case_number', 'c_offense_date', 'c_arrest_date', 'c_days_from_compas', 'c_charge_degree', 'c_charge_desc', 'is_recid', 'r_case_number', 'r_charge_degree', 'r_days_from_arrest', 'r_offense_date', 'r_charge_desc', 'r_jail_in', 'r_jail_out', 'violent_recid', 'is_violent_recid', 'vr_case_number', 'vr_charge_degree', 'vr_offense_date', 'vr_charge_desc', 'type_of_assessment', 'decile_score.1', 'score_text', 'screening_date', 'v_type_of_assessment', 'v_decile_score', 'v_score_text', 'v_screening_date', 'in_custody', 'out_custody', 'priors_count.1', 'start', 'end', 'event', 'label']\n"
+      "['ID', 'name', 'firstName', 'lastName', 'compas_screening_date', 'sex', 'dob', 'age', 'age_cat', 'race', 'juv_fel_count', 'decile_score', 'juv_misd_count', 'juv_other_count', 'priors_count', 'days_b_screening_arrest', 'c_jail_in', 'c_jail_out', 'c_case_number', 'c_offense_date', 'c_arrest_date', 'c_days_from_compas', 'c_charge_degree', 'c_charge_desc', 'is_recid', 'r_case_number', 'r_charge_degree', 'r_days_from_arrest', 'r_offense_date', 'r_charge_desc', 'r_jail_in', 'r_jail_out', 'violent_recid', 'is_violent_recid', 'vr_case_number', 'vr_charge_degree', 'vr_offense_date', 'vr_charge_desc', 'type_of_assessment', 'decile_score.1', 'score_text', 'screening_date', 'v_type_of_assessment', 'v_decile_score', 'v_score_text', 'v_screening_date', 'in_custody', 'out_custody', 'priors_count.1', 'start', 'end', 'event', 'label']\n"
      ]
     }
    ],
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -164,10 +164,10 @@
       "df['ID_code'] = df.ID.cat.codes\n",
       "df.name= pd.Categorical(df.name)\n",
       "df['name_code'] = df.name.cat.codes\n",
-      "df.first= pd.Categorical(df.first)\n",
-      "df['first_code'] = df.first.cat.codes\n",
-      "df.last= pd.Categorical(df.last)\n",
-      "df['last_code'] = df.last.cat.codes\n",
+      "df.firstName= pd.Categorical(df.firstName)\n",
+      "df['firstName_code'] = df.firstName.cat.codes\n",
+      "df.lastName= pd.Categorical(df.lastName)\n",
+      "df['lastName_code'] = df.lastName.cat.codes\n",
       "df.compas_screening_date= pd.Categorical(df.compas_screening_date)\n",
       "df['compas_screening_date_code'] = df.compas_screening_date.cat.codes\n",
       "df.sex= pd.Categorical(df.sex)\n",
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -289,6 +289,10 @@
     "df['ID_code'] = df.ID.cat.codes\n",
     "df.name= pd.Categorical(df.name)\n",
     "df['name_code'] = df.name.cat.codes\n",
+    "df.firstName= pd.Categorical(df.firstName)\n",
+    "df['firstName_code'] = df.firstName.cat.codes\n",
+    "df.lastName= pd.Categorical(df.lastName)\n",
+    "df['lastName_code'] = df.lastName.cat.codes\n",
     "df.compas_screening_date= pd.Categorical(df.compas_screening_date)\n",
     "df['compas_screening_date_code'] = df.compas_screening_date.cat.codes\n",
     "df.sex= pd.Categorical(df.sex)\n",
@@ -391,14 +395,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['ID_code', 'name_code', 'first_code', 'last_code', 'compas_screening_date_code', 'sex_code', 'dob_code', 'age_code', 'age_cat_code', 'race_code', 'juv_fel_count_code', 'decile_score_code', 'juv_misd_count_code', 'juv_other_count_code', 'priors_count_code', 'days_b_screening_arrest_code', 'c_jail_in_code', 'c_jail_out_code', 'c_case_number_code', 'c_offense_date_code', 'c_arrest_date_code', 'c_days_from_compas_code', 'c_charge_degree_code', 'c_charge_desc_code', 'is_recid_code', 'r_case_number_code', 'r_charge_degree_code', 'r_days_from_arrest_code', 'r_offense_date_code', 'r_charge_desc_code', 'r_jail_in_code', 'r_jail_out_code', 'violent_recid_code', 'is_violent_recid_code', 'vr_case_number_code', 'vr_charge_degree_code', 'vr_offense_date_code', 'vr_charge_desc_code', 'type_of_assessment_code', 'decile_score.1_code', 'score_text_code', 'screening_date_code', 'v_type_of_assessment_code', 'v_decile_score_code', 'v_score_text_code', 'v_screening_date_code', 'in_custody_code', 'out_custody_code', 'priors_count.1_code', 'start_code', 'end_code', 'event_code', 'label_code']\n"
+     "ename": "KeyError",
+     "evalue": "\"['first_code', 'last_code', 'decile_score.1_code', 'priors_count.1_code'] not in index\"",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "\u001b[1;32m/Users/jacobducas/Desktop/PolyAI/PolyAI/convictUnfiltered.ipynb Cellule 5\u001b[0m in \u001b[0;36m<cell line: 5>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/jacobducas/Desktop/PolyAI/PolyAI/convictUnfiltered.ipynb#X20sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m \u001b[39mfor\u001b[39;00m element \u001b[39min\u001b[39;00m column_title:\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/jacobducas/Desktop/PolyAI/PolyAI/convictUnfiltered.ipynb#X20sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m     features\u001b[39m.\u001b[39mappend(element\u001b[39m+\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m_code\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/jacobducas/Desktop/PolyAI/PolyAI/convictUnfiltered.ipynb#X20sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m X \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39marray(df[features])\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/jacobducas/Desktop/PolyAI/PolyAI/convictUnfiltered.ipynb#X20sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m y \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39marray(df[\u001b[39m'\u001b[39m\u001b[39mlabel_code\u001b[39m\u001b[39m'\u001b[39m])\n",
+      "File \u001b[0;32m/Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages/pandas/core/frame.py:3511\u001b[0m, in \u001b[0;36mDataFrame.__getitem__\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m   3509\u001b[0m     \u001b[39mif\u001b[39;00m is_iterator(key):\n\u001b[1;32m   3510\u001b[0m         key \u001b[39m=\u001b[39m \u001b[39mlist\u001b[39m(key)\n\u001b[0;32m-> 3511\u001b[0m     indexer \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mcolumns\u001b[39m.\u001b[39;49m_get_indexer_strict(key, \u001b[39m\"\u001b[39;49m\u001b[39mcolumns\u001b[39;49m\u001b[39m\"\u001b[39;49m)[\u001b[39m1\u001b[39m]\n\u001b[1;32m   3513\u001b[0m \u001b[39m# take() does not accept boolean indexers\u001b[39;00m\n\u001b[1;32m   3514\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mgetattr\u001b[39m(indexer, \u001b[39m\"\u001b[39m\u001b[39mdtype\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39mNone\u001b[39;00m) \u001b[39m==\u001b[39m \u001b[39mbool\u001b[39m:\n",
+      "File \u001b[0;32m/Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages/pandas/core/indexes/base.py:5796\u001b[0m, in \u001b[0;36mIndex._get_indexer_strict\u001b[0;34m(self, key, axis_name)\u001b[0m\n\u001b[1;32m   5793\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[1;32m   5794\u001b[0m     keyarr, indexer, new_indexer \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_reindex_non_unique(keyarr)\n\u001b[0;32m-> 5796\u001b[0m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_raise_if_missing(keyarr, indexer, axis_name)\n\u001b[1;32m   5798\u001b[0m keyarr \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mtake(indexer)\n\u001b[1;32m   5799\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39misinstance\u001b[39m(key, Index):\n\u001b[1;32m   5800\u001b[0m     \u001b[39m# GH 42790 - Preserve name from an Index\u001b[39;00m\n",
+      "File \u001b[0;32m/Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages/pandas/core/indexes/base.py:5859\u001b[0m, in \u001b[0;36mIndex._raise_if_missing\u001b[0;34m(self, key, indexer, axis_name)\u001b[0m\n\u001b[1;32m   5856\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mKeyError\u001b[39;00m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mNone of [\u001b[39m\u001b[39m{\u001b[39;00mkey\u001b[39m}\u001b[39;00m\u001b[39m] are in the [\u001b[39m\u001b[39m{\u001b[39;00maxis_name\u001b[39m}\u001b[39;00m\u001b[39m]\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[1;32m   5858\u001b[0m not_found \u001b[39m=\u001b[39m \u001b[39mlist\u001b[39m(ensure_index(key)[missing_mask\u001b[39m.\u001b[39mnonzero()[\u001b[39m0\u001b[39m]]\u001b[39m.\u001b[39munique())\n\u001b[0;32m-> 5859\u001b[0m \u001b[39mraise\u001b[39;00m \u001b[39mKeyError\u001b[39;00m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m{\u001b[39;00mnot_found\u001b[39m}\u001b[39;00m\u001b[39m not in index\u001b[39m\u001b[39m\"\u001b[39m)\n",
+      "\u001b[0;31mKeyError\u001b[0m: \"['first_code', 'last_code', 'decile_score.1_code', 'priors_count.1_code'] not in index\""
      ]
     }
    ],
@@ -407,7 +418,8 @@
     "for element in column_title:\n",
     "    features.append(element+\"_code\")\n",
     "\n",
-    "print(features)\n"
+    "X = np.array(df[features])\n",
+    "y = np.array(df['label_code'])\n"
    ]
   }
  ],
