--- a/convictUnfiltered.ipynb
+++ b/convictUnfiltered.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -64,7 +64,7 @@
       " 36  vr_offense_date          819 non-null    object \n",
       " 37  vr_charge_desc           819 non-null    object \n",
       " 38  type_of_assessment       7214 non-null   object \n",
-      " 39  decile_score.1           7214 non-null   int64  \n",
+      " 39  decile_score_1           7214 non-null   int64  \n",
       " 40  score_text               7214 non-null   object \n",
       " 41  screening_date           7214 non-null   object \n",
       " 42  v_type_of_assessment     7214 non-null   object \n",
@@ -73,7 +73,7 @@
       " 45  v_screening_date         7214 non-null   object \n",
       " 46  in_custody               6978 non-null   object \n",
       " 47  out_custody              6978 non-null   object \n",
-      " 48  priors_count.1           7214 non-null   int64  \n",
+      " 48  priors_count_1           7214 non-null   int64  \n",
       " 49  start                    7214 non-null   int64  \n",
       " 50  end                      7214 non-null   int64  \n",
       " 51  event                    7214 non-null   int64  \n",
@@ -105,7 +105,7 @@
       "8  1959-07-30   56  Greater than 45  African-American  ...               1   \n",
       "9  1985-05-16   30          25 - 45         Caucasian  ...               3   \n",
       "\n",
-      "   v_score_text  v_screening_date  in_custody  out_custody  priors_count.1  \\\n",
+      "   v_score_text  v_screening_date  in_custody  out_custody  priors_count_1  \\\n",
       "0           Low        2013-01-05  2014-03-25   2014-03-26               0   \n",
       "1           Low        2013-04-03  2013-04-02   2013-04-04               1   \n",
       "2           Low        2014-10-31  2014-10-31   2014-10-31               8   \n",
@@ -131,12 +131,12 @@
       "\n",
       "[10 rows x 53 columns]\n",
       "the name of all collumns : \n",
-      "['ID', 'name', 'firstName', 'lastName', 'compas_screening_date', 'sex', 'dob', 'age', 'age_cat', 'race', 'juv_fel_count', 'decile_score', 'juv_misd_count', 'juv_other_count', 'priors_count', 'days_b_screening_arrest', 'c_jail_in', 'c_jail_out', 'c_case_number', 'c_offense_date', 'c_arrest_date', 'c_days_from_compas', 'c_charge_degree', 'c_charge_desc', 'is_recid', 'r_case_number', 'r_charge_degree', 'r_days_from_arrest', 'r_offense_date', 'r_charge_desc', 'r_jail_in', 'r_jail_out', 'violent_recid', 'is_violent_recid', 'vr_case_number', 'vr_charge_degree', 'vr_offense_date', 'vr_charge_desc', 'type_of_assessment', 'decile_score.1', 'score_text', 'screening_date', 'v_type_of_assessment', 'v_decile_score', 'v_score_text', 'v_screening_date', 'in_custody', 'out_custody', 'priors_count.1', 'start', 'end', 'event', 'label']\n"
+      "['ID', 'name', 'firstName', 'lastName', 'compas_screening_date', 'sex', 'dob', 'age', 'age_cat', 'race', 'juv_fel_count', 'decile_score', 'juv_misd_count', 'juv_other_count', 'priors_count', 'days_b_screening_arrest', 'c_jail_in', 'c_jail_out', 'c_case_number', 'c_offense_date', 'c_arrest_date', 'c_days_from_compas', 'c_charge_degree', 'c_charge_desc', 'is_recid', 'r_case_number', 'r_charge_degree', 'r_days_from_arrest', 'r_offense_date', 'r_charge_desc', 'r_jail_in', 'r_jail_out', 'violent_recid', 'is_violent_recid', 'vr_case_number', 'vr_charge_degree', 'vr_offense_date', 'vr_charge_desc', 'type_of_assessment', 'decile_score_1', 'score_text', 'screening_date', 'v_type_of_assessment', 'v_decile_score', 'v_score_text', 'v_screening_date', 'in_custody', 'out_custody', 'priors_count_1', 'start', 'end', 'event', 'label']\n"
      ]
     }
    ],
    "source": [
-    "df = pd.read_csv(\"participants_dataset.csv\")\n",
+    "df = pd.read_csv(\"participants_dataset_modifié.csv\")\n",
     "\n",
     "print(\"INFO SUR LE SET\")\n",
     "df.info()\n",
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -238,8 +238,8 @@
       "df['vr_charge_desc_code'] = df.vr_charge_desc.cat.codes\n",
       "df.type_of_assessment= pd.Categorical(df.type_of_assessment)\n",
       "df['type_of_assessment_code'] = df.type_of_assessment.cat.codes\n",
-      "df.decile_score.1= pd.Categorical(df.decile_score.1)\n",
-      "df['decile_score.1_code'] = df.decile_score.1.cat.codes\n",
+      "df.decile_score_1= pd.Categorical(df.decile_score_1)\n",
+      "df['decile_score_1_code'] = df.decile_score_1.cat.codes\n",
       "df.score_text= pd.Categorical(df.score_text)\n",
       "df['score_text_code'] = df.score_text.cat.codes\n",
       "df.screening_date= pd.Categorical(df.screening_date)\n",
@@ -256,8 +256,8 @@
       "df['in_custody_code'] = df.in_custody.cat.codes\n",
       "df.out_custody= pd.Categorical(df.out_custody)\n",
       "df['out_custody_code'] = df.out_custody.cat.codes\n",
-      "df.priors_count.1= pd.Categorical(df.priors_count.1)\n",
-      "df['priors_count.1_code'] = df.priors_count.1.cat.codes\n",
+      "df.priors_count_1= pd.Categorical(df.priors_count_1)\n",
+      "df['priors_count_1_code'] = df.priors_count_1.cat.codes\n",
       "df.start= pd.Categorical(df.start)\n",
       "df['start_code'] = df.start.cat.codes\n",
       "df.end= pd.Categorical(df.end)\n",
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -363,8 +363,8 @@
     "df['vr_charge_desc_code'] = df.vr_charge_desc.cat.codes\n",
     "df.type_of_assessment= pd.Categorical(df.type_of_assessment)\n",
     "df['type_of_assessment_code'] = df.type_of_assessment.cat.codes\n",
-    "df.decile_score.1= pd.Categorical(df.decile_score.1)\n",
-    "df['decile_score.1_code'] = df.decile_score.1.cat.codes\n",
+    "df.decile_score_1= pd.Categorical(df.decile_score_1)\n",
+    "df['decile_score_1_code'] = df.decile_score_1.cat.codes\n",
     "df.score_text= pd.Categorical(df.score_text)\n",
     "df['score_text_code'] = df.score_text.cat.codes\n",
     "df.screening_date= pd.Categorical(df.screening_date)\n",
@@ -381,8 +381,8 @@
     "df['in_custody_code'] = df.in_custody.cat.codes\n",
     "df.out_custody= pd.Categorical(df.out_custody)\n",
     "df['out_custody_code'] = df.out_custody.cat.codes\n",
-    "df.priors_count.1= pd.Categorical(df.priors_count.1)\n",
-    "df['priors_count.1_code'] = df.priors_count.1.cat.codes\n",
+    "df.priors_count_1= pd.Categorical(df.priors_count_1)\n",
+    "df['priors_count_1_code'] = df.priors_count_1.cat.codes\n",
     "df.start= pd.Categorical(df.start)\n",
     "df['start_code'] = df.start.cat.codes\n",
     "df.end= pd.Categorical(df.end)\n",
@@ -395,24 +395,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 43,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "KeyError",
-     "evalue": "\"['first_code', 'last_code', 'decile_score.1_code', 'priors_count.1_code'] not in index\"",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "\u001b[1;32m/Users/jacobducas/Desktop/PolyAI/PolyAI/convictUnfiltered.ipynb Cellule 5\u001b[0m in \u001b[0;36m<cell line: 5>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/jacobducas/Desktop/PolyAI/PolyAI/convictUnfiltered.ipynb#X20sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m \u001b[39mfor\u001b[39;00m element \u001b[39min\u001b[39;00m column_title:\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/jacobducas/Desktop/PolyAI/PolyAI/convictUnfiltered.ipynb#X20sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m     features\u001b[39m.\u001b[39mappend(element\u001b[39m+\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m_code\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/jacobducas/Desktop/PolyAI/PolyAI/convictUnfiltered.ipynb#X20sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m X \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39marray(df[features])\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/jacobducas/Desktop/PolyAI/PolyAI/convictUnfiltered.ipynb#X20sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m y \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39marray(df[\u001b[39m'\u001b[39m\u001b[39mlabel_code\u001b[39m\u001b[39m'\u001b[39m])\n",
-      "File \u001b[0;32m/Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages/pandas/core/frame.py:3511\u001b[0m, in \u001b[0;36mDataFrame.__getitem__\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m   3509\u001b[0m     \u001b[39mif\u001b[39;00m is_iterator(key):\n\u001b[1;32m   3510\u001b[0m         key \u001b[39m=\u001b[39m \u001b[39mlist\u001b[39m(key)\n\u001b[0;32m-> 3511\u001b[0m     indexer \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mcolumns\u001b[39m.\u001b[39;49m_get_indexer_strict(key, \u001b[39m\"\u001b[39;49m\u001b[39mcolumns\u001b[39;49m\u001b[39m\"\u001b[39;49m)[\u001b[39m1\u001b[39m]\n\u001b[1;32m   3513\u001b[0m \u001b[39m# take() does not accept boolean indexers\u001b[39;00m\n\u001b[1;32m   3514\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mgetattr\u001b[39m(indexer, \u001b[39m\"\u001b[39m\u001b[39mdtype\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39mNone\u001b[39;00m) \u001b[39m==\u001b[39m \u001b[39mbool\u001b[39m:\n",
-      "File \u001b[0;32m/Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages/pandas/core/indexes/base.py:5796\u001b[0m, in \u001b[0;36mIndex._get_indexer_strict\u001b[0;34m(self, key, axis_name)\u001b[0m\n\u001b[1;32m   5793\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[1;32m   5794\u001b[0m     keyarr, indexer, new_indexer \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_reindex_non_unique(keyarr)\n\u001b[0;32m-> 5796\u001b[0m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_raise_if_missing(keyarr, indexer, axis_name)\n\u001b[1;32m   5798\u001b[0m keyarr \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mtake(indexer)\n\u001b[1;32m   5799\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39misinstance\u001b[39m(key, Index):\n\u001b[1;32m   5800\u001b[0m     \u001b[39m# GH 42790 - Preserve name from an Index\u001b[39;00m\n",
-      "File \u001b[0;32m/Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages/pandas/core/indexes/base.py:5859\u001b[0m, in \u001b[0;36mIndex._raise_if_missing\u001b[0;34m(self, key, indexer, axis_name)\u001b[0m\n\u001b[1;32m   5856\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mKeyError\u001b[39;00m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mNone of [\u001b[39m\u001b[39m{\u001b[39;00mkey\u001b[39m}\u001b[39;00m\u001b[39m] are in the [\u001b[39m\u001b[39m{\u001b[39;00maxis_name\u001b[39m}\u001b[39;00m\u001b[39m]\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[1;32m   5858\u001b[0m not_found \u001b[39m=\u001b[39m \u001b[39mlist\u001b[39m(ensure_index(key)[missing_mask\u001b[39m.\u001b[39mnonzero()[\u001b[39m0\u001b[39m]]\u001b[39m.\u001b[39munique())\n\u001b[0;32m-> 5859\u001b[0m \u001b[39mraise\u001b[39;00m \u001b[39mKeyError\u001b[39;00m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m{\u001b[39;00mnot_found\u001b[39m}\u001b[39;00m\u001b[39m not in index\u001b[39m\u001b[39m\"\u001b[39m)\n",
-      "\u001b[0;31mKeyError\u001b[0m: \"['first_code', 'last_code', 'decile_score.1_code', 'priors_count.1_code'] not in index\""
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "features = []\n",
     "for element in column_title:\n",
