--- a/convictUnfiltered.ipynb
+++ b/convictUnfiltered.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -153,9 +153,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (Temp/ipykernel_27432/1898521207.py, line 37)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"C:\\Users\\Rapha\\AppData\\Local\\Temp/ipykernel_27432/1898521207.py\"\u001b[1;36m, line \u001b[1;32m37\u001b[0m\n\u001b[1;33m    df. = pd.Categorical(df.)\u001b[0m\n\u001b[1;37m        ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "df.ID = pd.Categorical(df.ID)\n",
     "df['ID_code'] = df.ID.cat.codes\n",
@@ -234,13 +243,35 @@
     "df. = pd.Categorical(df.)\n",
     "df['_code'] = df..cat.codes\n",
     "df. = pd.Categorical(df.)\n",
-    "df['_code'] = df..cat.codes\n"
+    "df['_code'] = df..cat.codes\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['ID_code', 'name_code', 'first_code', 'last_code', 'compas_screening_date_code', 'sex_code', 'dob_code', 'age_code', 'age_cat_code', 'race_code', 'juv_fel_count_code', 'decile_score_code', 'juv_misd_count_code', 'juv_other_count_code', 'priors_count_code', 'days_b_screening_arrest_code', 'c_jail_in_code', 'c_jail_out_code', 'c_case_number_code', 'c_offense_date_code', 'c_arrest_date_code', 'c_days_from_compas_code', 'c_charge_degree_code', 'c_charge_desc_code', 'is_recid_code', 'r_case_number_code', 'r_charge_degree_code', 'r_days_from_arrest_code', 'r_offense_date_code', 'r_charge_desc_code', 'r_jail_in_code', 'r_jail_out_code', 'violent_recid_code', 'is_violent_recid_code', 'vr_case_number_code', 'vr_charge_degree_code', 'vr_offense_date_code', 'vr_charge_desc_code', 'type_of_assessment_code', 'decile_score.1_code', 'score_text_code', 'screening_date_code', 'v_type_of_assessment_code', 'v_decile_score_code', 'v_score_text_code', 'v_screening_date_code', 'in_custody_code', 'out_custody_code', 'priors_count.1_code', 'start_code', 'end_code', 'event_code', 'label_code']\n"
+     ]
+    }
+   ],
+   "source": [
+    "features = []\n",
+    "for element in column_title:\n",
+    "    features.append(element+\"_code\")\n",
+    "\n",
+    "print(features)\n"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.6 64-bit",
+   "display_name": "Python 3.9.13 64-bit (microsoft store)",
    "language": "python",
    "name": "python3"
   },
@@ -254,12 +285,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.9.13"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
+    "hash": "c15b2ea5c2eae486c929526cc4692e4c4cb46b9a3c8ba02d033ea0fbf6cf5ac1"
    }
   }
  },
