--- a/convict.ipynb
+++ b/convict.ipynb
@@ -168,7 +168,7 @@
     "for col_name in df.columns: \n",
     "    column_title.append(col_name)\n",
     "\n",
-    "print(column_title)\n"
+    "print(column_title) #tests\n"
    ]
   },
   {
