--- a/convictUnfiltered.ipynb
+++ b/convictUnfiltered.ipynb
@@ -148,7 +148,7 @@
     "for col_name in df.columns: \n",
     "    column_title.append(col_name)\n",
     "\n",
-    "print(column_title)"
+    "print(column_title) #test"
    ]
   },
   {
