--- a/convict.ipynb
+++ b/convict.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 86,
    "metadata": {
     "collapsed": true,
     "pycharm": {
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
@@ -322,7 +322,7 @@
        "1    0.0  "
       ]
      },
-     "execution_count": 41,
+     "execution_count": 88,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -343,15 +343,121 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [],
    "source": [
+    "df = pd.read_csv(\"participants_dataset.csv\")\n",
+    "\n",
+    "df.ID= pd.Categorical(df.ID)\n",
+    "df['ID_code'] = df.ID.cat.codes\n",
+    "df.name= pd.Categorical(df.name)\n",
+    "df['name_code'] = df.name.cat.codes\n",
+    "df.compas_screening_date= pd.Categorical(df.compas_screening_date)\n",
+    "df['compas_screening_date_code'] = df.compas_screening_date.cat.codes\n",
+    "df.sex= pd.Categorical(df.sex)\n",
+    "df['sex_code'] = df.sex.cat.codes\n",
+    "df.dob= pd.Categorical(df.dob)\n",
+    "df['dob_code'] = df.dob.cat.codes\n",
+    "df.age= pd.Categorical(df.age)\n",
+    "df['age_code'] = df.age.cat.codes\n",
+    "df.age_cat= pd.Categorical(df.age_cat)\n",
+    "df['age_cat_code'] = df.age_cat.cat.codes\n",
+    "df.race= pd.Categorical(df.race)\n",
+    "df['race_code'] = df.race.cat.codes\n",
+    "df.juv_fel_count= pd.Categorical(df.juv_fel_count)\n",
+    "df['juv_fel_count_code'] = df.juv_fel_count.cat.codes\n",
+    "df.decile_score= pd.Categorical(df.decile_score)\n",
+    "df['decile_score_code'] = df.decile_score.cat.codes\n",
+    "df.juv_misd_count= pd.Categorical(df.juv_misd_count)\n",
+    "df['juv_misd_count_code'] = df.juv_misd_count.cat.codes\n",
+    "df.juv_other_count= pd.Categorical(df.juv_other_count)\n",
+    "df['juv_other_count_code'] = df.juv_other_count.cat.codes\n",
+    "df.priors_count= pd.Categorical(df.priors_count)\n",
+    "df['priors_count_code'] = df.priors_count.cat.codes\n",
+    "df.days_b_screening_arrest= pd.Categorical(df.days_b_screening_arrest)\n",
+    "df['days_b_screening_arrest_code'] = df.days_b_screening_arrest.cat.codes\n",
+    "df.c_jail_in= pd.Categorical(df.c_jail_in)\n",
+    "df['c_jail_in_code'] = df.c_jail_in.cat.codes\n",
+    "df.c_jail_out= pd.Categorical(df.c_jail_out)\n",
+    "df['c_jail_out_code'] = df.c_jail_out.cat.codes\n",
+    "df.c_case_number= pd.Categorical(df.c_case_number)\n",
+    "df['c_case_number_code'] = df.c_case_number.cat.codes\n",
+    "df.c_offense_date= pd.Categorical(df.c_offense_date)\n",
+    "df['c_offense_date_code'] = df.c_offense_date.cat.codes\n",
+    "df.c_arrest_date= pd.Categorical(df.c_arrest_date)\n",
+    "df['c_arrest_date_code'] = df.c_arrest_date.cat.codes\n",
+    "df.c_days_from_compas= pd.Categorical(df.c_days_from_compas)\n",
+    "df['c_days_from_compas_code'] = df.c_days_from_compas.cat.codes\n",
+    "df.c_charge_degree= pd.Categorical(df.c_charge_degree)\n",
+    "df['c_charge_degree_code'] = df.c_charge_degree.cat.codes\n",
+    "df.c_charge_desc= pd.Categorical(df.c_charge_desc)\n",
+    "df['c_charge_desc_code'] = df.c_charge_desc.cat.codes\n",
+    "df.is_recid= pd.Categorical(df.is_recid)\n",
+    "df['is_recid_code'] = df.is_recid.cat.codes\n",
+    "df.r_case_number= pd.Categorical(df.r_case_number)\n",
+    "df['r_case_number_code'] = df.r_case_number.cat.codes\n",
+    "df.r_charge_degree= pd.Categorical(df.r_charge_degree)\n",
+    "df['r_charge_degree_code'] = df.r_charge_degree.cat.codes\n",
+    "df.r_days_from_arrest= pd.Categorical(df.r_days_from_arrest)\n",
+    "df['r_days_from_arrest_code'] = df.r_days_from_arrest.cat.codes\n",
+    "df.r_offense_date= pd.Categorical(df.r_offense_date)\n",
+    "df['r_offense_date_code'] = df.r_offense_date.cat.codes\n",
+    "df.r_charge_desc= pd.Categorical(df.r_charge_desc)\n",
+    "df['r_charge_desc_code'] = df.r_charge_desc.cat.codes\n",
+    "df.r_jail_in= pd.Categorical(df.r_jail_in)\n",
+    "df['r_jail_in_code'] = df.r_jail_in.cat.codes\n",
+    "df.r_jail_out= pd.Categorical(df.r_jail_out)\n",
+    "df['r_jail_out_code'] = df.r_jail_out.cat.codes\n",
+    "df.violent_recid= pd.Categorical(df.violent_recid)\n",
+    "df['violent_recid_code'] = df.violent_recid.cat.codes\n",
+    "df.is_violent_recid= pd.Categorical(df.is_violent_recid)\n",
+    "df['is_violent_recid_code'] = df.is_violent_recid.cat.codes\n",
+    "df.vr_case_number= pd.Categorical(df.vr_case_number)\n",
+    "df['vr_case_number_code'] = df.vr_case_number.cat.codes\n",
+    "df.vr_charge_degree= pd.Categorical(df.vr_charge_degree)\n",
+    "df['vr_charge_degree_code'] = df.vr_charge_degree.cat.codes\n",
+    "df.vr_offense_date= pd.Categorical(df.vr_offense_date)\n",
+    "df['vr_offense_date_code'] = df.vr_offense_date.cat.codes\n",
+    "df.vr_charge_desc= pd.Categorical(df.vr_charge_desc)\n",
+    "df['vr_charge_desc_code'] = df.vr_charge_desc.cat.codes\n",
+    "df.type_of_assessment= pd.Categorical(df.type_of_assessment)\n",
+    "df['type_of_assessment_code'] = df.type_of_assessment.cat.codes\n",
+    "df.score_text= pd.Categorical(df.score_text)\n",
+    "df['score_text_code'] = df.score_text.cat.codes\n",
+    "df.screening_date= pd.Categorical(df.screening_date)\n",
+    "df['screening_date_code'] = df.screening_date.cat.codes\n",
+    "df.v_type_of_assessment= pd.Categorical(df.v_type_of_assessment)\n",
+    "df['v_type_of_assessment_code'] = df.v_type_of_assessment.cat.codes\n",
+    "df.v_decile_score= pd.Categorical(df.v_decile_score)\n",
+    "df['v_decile_score_code'] = df.v_decile_score.cat.codes\n",
+    "df.v_score_text= pd.Categorical(df.v_score_text)\n",
+    "df['v_score_text_code'] = df.v_score_text.cat.codes\n",
+    "df.v_screening_date= pd.Categorical(df.v_screening_date)\n",
+    "df['v_screening_date_code'] = df.v_screening_date.cat.codes\n",
+    "df.in_custody= pd.Categorical(df.in_custody)\n",
+    "df['in_custody_code'] = df.in_custody.cat.codes\n",
+    "df.out_custody= pd.Categorical(df.out_custody)\n",
+    "df['out_custody_code'] = df.out_custody.cat.codes\n",
+    "df.start= pd.Categorical(df.start)\n",
+    "df['start_code'] = df.start.cat.codes\n",
+    "df.end= pd.Categorical(df.end)\n",
+    "df['end_code'] = df.end.cat.codes\n",
+    "df.event= pd.Categorical(df.event)\n",
+    "df['event_code'] = df.event.cat.codes\n",
+    "df.label= pd.Categorical(df.label)\n",
+    "df['label_code'] = df.label.cat.codes\n",
+    "\n",
+    "Important_columns = [\"sex_code\",\"age_cat_code\", \"juv_fel_count_code\", \"juv_misd_count_code\", \"juv_other_count\",\"priors_count_code\",\"c_charge_degree_code\",\n",
+    " \"c_charge_desc_code\", \"is_recid_code\",\"label_code\", \"c_jail_out_code\", \"c_jail_in_code\", \"r_charge_degree_code\", \"r_charge_desc_code\", \"is_violent_recid_code\", \"vr_charge_degree_code\",\n",
+    "  \"vr_charge_desc_code\", \"score_text_code\", \"v_score_text_code\"]\n",
+    "\n",
+    "df_final = df[df.columns[df.columns.isin(Important_columns)]]\n",
     "import numpy as np\n",
-    "X = np.array(df_filtered)\n",
-    "y = np.array(df[\"label\"])\n",
+    "X = np.array(df_final)\n",
+    "y = np.array(df[\"label_code\"])\n",
     "from sklearn.model_selection import train_test_split\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size = 0.2, random_state = 42)"
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size = 0.2, random_state = 42)\n"
    ]
   },
   {
@@ -363,32 +469,93 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ValueError",
-     "evalue": "could not convert string to float: 'Male'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn [48], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39msklearn\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mensemble\u001b[39;00m \u001b[39mimport\u001b[39;00m RandomForestRegressor\n\u001b[1;32m      2\u001b[0m reg_rf \u001b[39m=\u001b[39m RandomForestRegressor()\n\u001b[0;32m----> 3\u001b[0m reg_rf\u001b[39m.\u001b[39;49mfit(X_train, y_train)\n\u001b[1;32m      4\u001b[0m y_pred \u001b[39m=\u001b[39m reg_rf\u001b[39m.\u001b[39mpredict(X_test)\n\u001b[1;32m      5\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39msklearn\u001b[39;00m \u001b[39mimport\u001b[39;00m metrics\n",
-      "File \u001b[0;32m/Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages/sklearn/ensemble/_forest.py:331\u001b[0m, in \u001b[0;36mBaseForest.fit\u001b[0;34m(self, X, y, sample_weight)\u001b[0m\n\u001b[1;32m    329\u001b[0m \u001b[39mif\u001b[39;00m issparse(y):\n\u001b[1;32m    330\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mValueError\u001b[39;00m(\u001b[39m\"\u001b[39m\u001b[39msparse multilabel-indicator for y is not supported.\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[0;32m--> 331\u001b[0m X, y \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_validate_data(\n\u001b[1;32m    332\u001b[0m     X, y, multi_output\u001b[39m=\u001b[39;49m\u001b[39mTrue\u001b[39;49;00m, accept_sparse\u001b[39m=\u001b[39;49m\u001b[39m\"\u001b[39;49m\u001b[39mcsc\u001b[39;49m\u001b[39m\"\u001b[39;49m, dtype\u001b[39m=\u001b[39;49mDTYPE\n\u001b[1;32m    333\u001b[0m )\n\u001b[1;32m    334\u001b[0m \u001b[39mif\u001b[39;00m sample_weight \u001b[39mis\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n\u001b[1;32m    335\u001b[0m     sample_weight \u001b[39m=\u001b[39m _check_sample_weight(sample_weight, X)\n",
-      "File \u001b[0;32m/Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages/sklearn/base.py:596\u001b[0m, in \u001b[0;36mBaseEstimator._validate_data\u001b[0;34m(self, X, y, reset, validate_separately, **check_params)\u001b[0m\n\u001b[1;32m    594\u001b[0m         y \u001b[39m=\u001b[39m check_array(y, input_name\u001b[39m=\u001b[39m\u001b[39m\"\u001b[39m\u001b[39my\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mcheck_y_params)\n\u001b[1;32m    595\u001b[0m     \u001b[39melse\u001b[39;00m:\n\u001b[0;32m--> 596\u001b[0m         X, y \u001b[39m=\u001b[39m check_X_y(X, y, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mcheck_params)\n\u001b[1;32m    597\u001b[0m     out \u001b[39m=\u001b[39m X, y\n\u001b[1;32m    599\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m no_val_X \u001b[39mand\u001b[39;00m check_params\u001b[39m.\u001b[39mget(\u001b[39m\"\u001b[39m\u001b[39mensure_2d\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39mTrue\u001b[39;00m):\n",
-      "File \u001b[0;32m/Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages/sklearn/utils/validation.py:1074\u001b[0m, in \u001b[0;36mcheck_X_y\u001b[0;34m(X, y, accept_sparse, accept_large_sparse, dtype, order, copy, force_all_finite, ensure_2d, allow_nd, multi_output, ensure_min_samples, ensure_min_features, y_numeric, estimator)\u001b[0m\n\u001b[1;32m   1069\u001b[0m         estimator_name \u001b[39m=\u001b[39m _check_estimator_name(estimator)\n\u001b[1;32m   1070\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mValueError\u001b[39;00m(\n\u001b[1;32m   1071\u001b[0m         \u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m{\u001b[39;00mestimator_name\u001b[39m}\u001b[39;00m\u001b[39m requires y to be passed, but the target y is None\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m   1072\u001b[0m     )\n\u001b[0;32m-> 1074\u001b[0m X \u001b[39m=\u001b[39m check_array(\n\u001b[1;32m   1075\u001b[0m     X,\n\u001b[1;32m   1076\u001b[0m     accept_sparse\u001b[39m=\u001b[39;49maccept_sparse,\n\u001b[1;32m   1077\u001b[0m     accept_large_sparse\u001b[39m=\u001b[39;49maccept_large_sparse,\n\u001b[1;32m   1078\u001b[0m     dtype\u001b[39m=\u001b[39;49mdtype,\n\u001b[1;32m   1079\u001b[0m     order\u001b[39m=\u001b[39;49morder,\n\u001b[1;32m   1080\u001b[0m     copy\u001b[39m=\u001b[39;49mcopy,\n\u001b[1;32m   1081\u001b[0m     force_all_finite\u001b[39m=\u001b[39;49mforce_all_finite,\n\u001b[1;32m   1082\u001b[0m     ensure_2d\u001b[39m=\u001b[39;49mensure_2d,\n\u001b[1;32m   1083\u001b[0m     allow_nd\u001b[39m=\u001b[39;49mallow_nd,\n\u001b[1;32m   1084\u001b[0m     ensure_min_samples\u001b[39m=\u001b[39;49mensure_min_samples,\n\u001b[1;32m   1085\u001b[0m     ensure_min_features\u001b[39m=\u001b[39;49mensure_min_features,\n\u001b[1;32m   1086\u001b[0m     estimator\u001b[39m=\u001b[39;49mestimator,\n\u001b[1;32m   1087\u001b[0m     input_name\u001b[39m=\u001b[39;49m\u001b[39m\"\u001b[39;49m\u001b[39mX\u001b[39;49m\u001b[39m\"\u001b[39;49m,\n\u001b[1;32m   1088\u001b[0m )\n\u001b[1;32m   1090\u001b[0m y \u001b[39m=\u001b[39m _check_y(y, multi_output\u001b[39m=\u001b[39mmulti_output, y_numeric\u001b[39m=\u001b[39my_numeric, estimator\u001b[39m=\u001b[39mestimator)\n\u001b[1;32m   1092\u001b[0m check_consistent_length(X, y)\n",
-      "File \u001b[0;32m/Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages/sklearn/utils/validation.py:856\u001b[0m, in \u001b[0;36mcheck_array\u001b[0;34m(array, accept_sparse, accept_large_sparse, dtype, order, copy, force_all_finite, ensure_2d, allow_nd, ensure_min_samples, ensure_min_features, estimator, input_name)\u001b[0m\n\u001b[1;32m    854\u001b[0m         array \u001b[39m=\u001b[39m array\u001b[39m.\u001b[39mastype(dtype, casting\u001b[39m=\u001b[39m\u001b[39m\"\u001b[39m\u001b[39munsafe\u001b[39m\u001b[39m\"\u001b[39m, copy\u001b[39m=\u001b[39m\u001b[39mFalse\u001b[39;00m)\n\u001b[1;32m    855\u001b[0m     \u001b[39melse\u001b[39;00m:\n\u001b[0;32m--> 856\u001b[0m         array \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39;49masarray(array, order\u001b[39m=\u001b[39;49morder, dtype\u001b[39m=\u001b[39;49mdtype)\n\u001b[1;32m    857\u001b[0m \u001b[39mexcept\u001b[39;00m ComplexWarning \u001b[39mas\u001b[39;00m complex_warning:\n\u001b[1;32m    858\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mValueError\u001b[39;00m(\n\u001b[1;32m    859\u001b[0m         \u001b[39m\"\u001b[39m\u001b[39mComplex data not supported\u001b[39m\u001b[39m\\n\u001b[39;00m\u001b[39m{}\u001b[39;00m\u001b[39m\\n\u001b[39;00m\u001b[39m\"\u001b[39m\u001b[39m.\u001b[39mformat(array)\n\u001b[1;32m    860\u001b[0m     ) \u001b[39mfrom\u001b[39;00m \u001b[39mcomplex_warning\u001b[39;00m\n",
-      "\u001b[0;31mValueError\u001b[0m: could not convert string to float: 'Male'"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages/sklearn/linear_model/_logistic.py:444: ConvergenceWarning: lbfgs failed to converge (status=1):\n",
+      "STOP: TOTAL NO. of ITERATIONS REACHED LIMIT.\n",
+      "\n",
+      "Increase the number of iterations (max_iter) or scale the data as shown in:\n",
+      "    https://scikit-learn.org/stable/modules/preprocessing.html\n",
+      "Please also refer to the documentation for alternative solver options:\n",
+      "    https://scikit-learn.org/stable/modules/linear_model.html#logistic-regression\n",
+      "  n_iter_i = _check_optimize_result(\n"
      ]
     }
    ],
    "source": [
-    "from sklearn.ensemble import RandomForestRegressor\n",
-    "reg_rf = RandomForestRegressor()\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "reg_log = LogisticRegression()\n",
+    "reg_log.fit(X_train, y_train)\n",
+    "y_pred = reg_log.predict(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "          -1       0.00      0.00      0.00       283\n",
+      "           0       0.76      0.93      0.84       666\n",
+      "           1       0.74      0.94      0.83       494\n",
+      "\n",
+      "    accuracy                           0.75      1443\n",
+      "   macro avg       0.50      0.62      0.56      1443\n",
+      "weighted avg       0.61      0.75      0.67      1443\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn import metrics\n",
+    "print(metrics.classification_report(y_test, y_pred))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "ForestDOWN method"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "          -1       1.00      1.00      1.00       283\n",
+      "           0       1.00      1.00      1.00       666\n",
+      "           1       1.00      1.00      1.00       494\n",
+      "\n",
+      "    accuracy                           1.00      1443\n",
+      "   macro avg       1.00      1.00      1.00      1443\n",
+      "weighted avg       1.00      1.00      1.00      1443\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "reg_rf = RandomForestClassifier()\n",
     "reg_rf.fit(X_train, y_train)\n",
     "y_pred = reg_rf.predict(X_test)\n",
-    "from sklearn import metrics\n",
-    "print('Mean Squared Error:', metrics.mean_squared_error(y_test, y_pred))"
+    "print(metrics.classification_report(y_test, y_pred))"
    ]
   }
  ],
