--- a/convictUnfiltered.ipynb
+++ b/convictUnfiltered.ipynb
@@ -148,7 +148,8 @@
     "for col_name in df.columns: \n",
     "    column_title.append(col_name)\n",
     "\n",
-    "print(column_title)"
+    "print(column_title) #impression titres colonnes\n",
+    "print(\"coucou\")"
    ]
   },
   {
@@ -271,7 +272,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.13 64-bit (microsoft store)",
+   "display_name": "Python 3.10.7 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -285,12 +286,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.10.7"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "c15b2ea5c2eae486c929526cc4692e4c4cb46b9a3c8ba02d033ea0fbf6cf5ac1"
+    "hash": "369f2c481f4da34e4445cda3fffd2e751bd1c4d706f27375911949ba6bb62e1c"
    }
   }
  },
